--- a/MyFirstPhoneGap/index.html
+++ b/MyFirstPhoneGap/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
     <title>Our Application</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.2.css">
+    <link rel="stylesheet" href="JS/MyIST.js">
+    <link rel="stylesheet" href="JS/jquery.mobile-1.4.2.js">
+
 </head>
 <body>
     <div>Placeholder</div>
