--- a/MyFirstPhoneGap/index.html
+++ b/MyFirstPhoneGap/index.html
@@ -6,12 +6,72 @@
     <title>Our Application</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/jquery.mobile-1.4.2.css">
-    <link rel="stylesheet" href="JS/MyIST.js">
-    <link rel="stylesheet" href="JS/jquery.mobile-1.4.2.js">
+    <script  src="JS/MyIST.js" type="text/javascript"></script>
+    <script src="JS/jquery-2.1.0.js" type="text/javascript"></script>
+
+    
+    <script src="JS/jquery.mobile-1.4.2.js" type="text/javascript"></script>
+    <script src="cordova.js" type="text/javascript"></script>
 
 </head>
 <body>
-    <div>Placeholder</div>
+    <div data-role="page" id="main">
+
+        <div data-role="header">
+            <h1>Welcome To My Homepage</h1>
+        </div>
+
+        <div data-role="main" class="ui-content">
+            <p>I Am a mobile Developer!!</p>
+            <ul data-role="listview" id="ulContent">
+                <li><a href="#">GeoLocation</a></li>
+                <li data-icon="plus"><a href="#">Splash Screen"</a></li>
+                <li data-icon="minus"><a href="#">In App Browser</a></li>
+                <li data-icon="delete"><a href="#Notification">Notifications</a></li>
+                </ul>
+        </div>
+
+
+        <div data-role="footer">
+            <h1>Phone Gap Developer</h1>
+        </div>
+
+      
+    </div>
+    <div data-role="page" id="Notification">
+        <div data-role="header">
+            <h1>Welcome To My Homepage</h1>
+        </div>
+
+        <div data-role="main" class="ui-content">
+            <p>This is the test Notification page. <b>Note</b>.</p>
+            <a href="#"  id="alert" class="ui-btn ui-btn-inline ui-shadow ui-corner-all ui-icon-home ui-btn-icon-left" >alert</a>
+            <a href="#"  id="confirm" class="ui-btn ui-btn-inline ui-shadow ui-corner-all ui-icon-grid ui-btn-icon-left" data-rel="dialog">confirm</a>
+            <a href="#" id="prompt" class="ui-btn ui-btn-inline ui-shadow ui-corner-all ui-icon-search ui-btn-icon-left" data-rel="dialog">prompt</a>
+            <a href="#options" id="beep" class="ui-btn ui-btn-inline ui-shadow ui-corner-all ui-icon-grid ui-btn-icon-left" data-rel="dialog">beep</a>
+            <a href="#search" id="vibrate" class="ui-btn ui-btn-inline ui-shadow ui-corner-all ui-icon-search ui-btn-icon-left" data-rel="dialog">Vibrate</a>
+            <a href="#main">Go Back</a>
+        </div>
+
+        <div data-role="footer">
+            <h1>Footer Text</h1>
+        </div>
+    </div> 
+    <script>
+        $(document).on("pageinit", function () {
+            $("#alert").bind("tap", function () {
+                navigator.notification.alert("Phone GAP SDK Alert", AlertCallBack, "Alert Section", "Ok PhoneGap")
+            });
+            $("#confirm").bind("tap", function () {
+                navigator.notification.confirm("Phone GAP SDK confirm", AlertCallBack, "Alert Section", "Ok PhoneGap")
+            });
+            $("#prompt").bind("tap", function () {
+                navigator.notification.prompt("Phone GAP SDK confirm", AlertCallBack, "Alert Section", "Ok PhoneGap", "default text")
+            });
+        });
+        function AlertCallBack(a) {
+        }
+    </script>
 </body>
 </html>
  
