--- a/MyFirstPhoneGap/index.html
+++ b/MyFirstPhoneGap/index.html
@@ -11,7 +11,7 @@
 
     
     <script src="JS/jquery.mobile-1.4.2.js" type="text/javascript"></script>
-    <script src="cordova.js" type="text/javascript"></script>
+    <!--<script src="cordova.js" type="text/javascript"></script>-->
 
 </head>
 <body>
